--- a/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/Global.UnitTests/Global.UnitTests.csproj
@@ -119,6 +119,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.3.0\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
@@ -145,7 +146,7 @@
     <Compile Include="Chapter6.Tests\EssentialTool.Test.cs" />
     <Compile Include="Chapter6.Tests\LinqValueCalc.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SportStore.UnitTests\UnitTest1.cs" />
+    <Compile Include="SportsStore.UnitTests\PageLinksTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -156,10 +157,16 @@
       <Project>{289344DD-48D6-463F-A363-42D180FB9EF1}</Project>
       <Name>PartOne.Introduction</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj">
+      <Project>{A74E2680-5DC7-4B3E-A1E4-C7B33CC65B3C}</Project>
+      <Name>SportsStore.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SportsStore.Web\SportsStore.Web.csproj">
+      <Project>{a7e8e721-b3d6-47f8-9d81-13c99e344f60}</Project>
+      <Name>SportsStore.Web</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="untitled\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
