--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Web.config
@@ -15,7 +15,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
 	<connectionStrings>
-		<add name="EFDbContext" connectionString="Data Source=JEANPC\DEVSERVER; Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient"/>
+		<add name="EFDbContext" connectionString="Data Source=JEANPC\DEVSERVER; Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -54,6 +54,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Ninject.Web.Common" publicKeyToken="c7192dc5380945e7" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.3.2.0" newVersion="3.3.2.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
