--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/packages.config
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="5.3.3" targetFramework="net481" />
   <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
@@ -11,7 +12,7 @@
   <package id="Ninject" version="3.3.6" targetFramework="net481" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net481" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net481" />
 </packages>
