--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Domain/SportsStore.Domain.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Domain/SportsStore.Domain.csproj
@@ -72,9 +72,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\IMerchRepo.cs" />
+    <Compile Include="Abstract\IMerchandiseRepository.cs" />
     <Compile Include="Abstract\IProductVendorRepo.cs" />
-    <Compile Include="Concrete\EFMerchRepository.cs" />
+    <Compile Include="Concrete\EFMerchRepo.cs" />
     <Compile Include="Concrete\ProductVendorRepository.cs" />
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\EFDbAccess.cs" />
