--- a/Pluralsight Tutorials/3. Learning the C-Sharp Language/2. C-Sharp Fundamentals/WORKSPACE/Module11/Module11.csproj
+++ b/Pluralsight Tutorials/3. Learning the C-Sharp Language/2. C-Sharp Fundamentals/WORKSPACE/Module11/Module11.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="BethanysPieShopHRM.Logic">
+      <HintPath>..\..\Assets\LocalCustomLogic.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
