--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/SportsStore.Web.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/SportsStore.Web.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>SportsStore.Web</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <Use64BitIISExpress />
+    <Use64BitIISExpress>false</Use64BitIISExpress>
     <IISExpressSSLPort>44311</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -149,7 +149,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Merch\List.cshtml" />
     <Content Include="Views\Shared\_NavHeader.cshtml" />
-    <Content Include="Views\Merch\_MerchSummary.cshtml" />
+    <Content Include="Views\Shared\_MerchSummary.cshtml" />
     <Content Include="Views\ProductVendor\List.cshtml" />
     <Content Include="Views\ProductVendor\_ProductVendor.cshtml" />
     <Content Include="Views\Nav\Menu.cshtml" />
