--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/packages.config
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/packages.config
@@ -13,5 +13,10 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
+  <package id="Ninject" version="3.3.6" targetFramework="net481" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net481" />
+  <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net481" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.2" targetFramework="net481" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
 </packages>
