--- a/Textbook Exercises/SportsStore.Web/SportsStore.Domain/SportsStore.Domain.csproj
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Domain/SportsStore.Domain.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Abstract\IProductRepository.cs" />
     <Compile Include="Concrete\SSDBContext.cs" />
     <Compile Include="Concrete\SSProductRepository.cs" />
+    <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
