--- a/Textbook Exercises/SportsStore.Web/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -141,6 +141,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
