--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/SportsStore.Web.csproj
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/SportsStore.Web.csproj
@@ -155,6 +155,7 @@
     </Compile>
     <Compile Include="Infrastructure\NinjectDependencyResolver.cs" />
     <Compile Include="Infrastructure\PagingHelpers.cs" />
+    <Compile Include="Models\CartIndexViewModel.cs" />
     <Compile Include="Models\PagingInfo.cs" />
     <Compile Include="Models\ProductsListViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -186,10 +187,10 @@
     <Content Include="Views\Product\ProductListing.cshtml" />
     <Content Include="Views\Shared\_ProductSummary.cshtml" />
     <Content Include="Views\Nav\Menu.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Cart\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
