--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/SportsStore.Web.csproj
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/SportsStore.Web.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\CartModelBinder.cs" />
     <Compile Include="Infrastructure\NinjectDependencyResolver.cs" />
     <Compile Include="Infrastructure\PagingHelpers.cs" />
     <Compile Include="Models\CartIndexViewModel.cs" />
