--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/web.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="Ch13_IdentityApiSupport" />
+        <add namespace="IdentityApiSupport" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
